# Qt_projects

./: .gitignore
DragEvent/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Gesture/: CMakeLists.txt  CMakeLists.txt.WAUati  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  output.txt  res.qrc  test.py
Gesture/control/: controlwid.cpp  controlwid.h  controlwid.ui
Gesture/data/: autoclosedialog.cpp  autoclosedialog.h  autoclosedialog.ui  datastorethread.cpp  datastorethread.h  sqliteoperator.cpp  sqliteoperator.h  tableWid.h  (+5 more)
ModelAndView/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  stringlistmodel.cpp  stringlistmodel.h
Serial/: CMakeLists.txt  customcombox.cpp  customcombox.h  infohelper.cpp  infohelper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialmanager.cpp  serialmanager.h  src.qrc  test.cpp  test.h
album/: CMakeLists.txt  closeprodialog.cpp  closeprodialog.h  closeprodialog.ui  comfirmpage.cpp  comfirmpage.h  comfirmpage.ui  config.h  function.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  musiclistwid.cpp  musiclistwid.h  musiclistwiditem.cpp  musiclistwiditem.h  musicwid.cpp  musicwid.h  musicwid.ui  picbutton.cpp  picbutton.h  portraypic.cpp  portraypic.h  portraypic.ui  prelistwid.cpp  prelistwid.h  prelistwiditem.cpp  prelistwiditem.h  proopenpage.cpp  proopenpage.h  prosetpage.cpp  prosetpage.h  prosetpage.ui  protree.cpp  protree.h  protreeitem.cpp  protreeitem.h  protreethread.cpp  protreethread.h  (+11 more)
codeEdit/: CMakeLists.txt  CMakeLists.txt.user.3c4648f  codeeditor.cpp  codeeditor.h  highlighter.cpp  linearea.cpp  linearea.h  mainwindow.cpp  mainwindow.h
keilProject/: CMakeLists.txt  config.h  control.cpp  control.h  control.ui  deletedlg.cpp  deletedlg.h  deletedlg.ui  helpdlg.cpp  helpdlg.h  helpdlg.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pjtree.cpp  pjtree.h  pjtree.ui  pjtreewidget.cpp  pjtreewidget.h  pjtreewidgetitem.cpp  pjtreewidgetitem.h  rsc.qrc  xmlparser.cpp  xmlparser.h
keilProject/rsc/: help.md  style.qss
keyEvents/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
mouseEvent/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
moveWight/: CMakeLists.txt  Mycustomevent.cpp  Mycustomevent.h  myedit.cpp  myedit.h  widget.cpp  widget.h  widget.ui
practice/: CMakeLists.txt  CMakeLists.txt.user.3c4648f  dialog.cpp  dialog.h  dialog.ui  main.cpp  myaction.cpp  myaction.h  mymenu.cpp  mymenu.h  mymenu.ui  mytextedit.cpp  mytextedit.h  mytextedit.ui  regist.cpp  regist.h  regist.ui  wight.cpp  wight.h  wight.ui
styleTest/: CMakeLists.txt  main.cpp  mainwindow.ui  mywidget.cpp  mywidget.ui  style.qss
(+23 files in other folders)
